# krc20-draft

./: .gitignore  LICENSE  README.md
krc20/: Cargo.toml  check
krc20/src/: client.rs  constants.rs  detect.rs  krc20-tx-example.md  lib.rs  main.rs  operations.rs  optypes.rs  tn11-data.md  transactions.rs
