[package]
name = "krc20"
version = "0.1.0"
edition = "2021"

[dependencies]
# kaspa-consensus-core = "0.13.4"
# kaspa-txscript = "0.13.4"
# kaspa-wrpc-client = "0.13.4"
kaspa-consensus-core = {path="../../rusty-kaspa/consensus/core" }
kaspa-txscript = {path="../../rusty-kaspa/crypto/txscript" }
kaspa-wrpc-client = {path="../../rusty-kaspa/rpc/wrpc/client" }
kaspa-addresses = {path="../../rusty-kaspa/crypto/addresses" }
kaspa-txscript-errors = {path="../../rusty-kaspa/crypto/txscript/errors" }
kaspa-consensus-client = { path = "../../rusty-kaspa/consensus/client" }
kaspa-rpc-core = { path = "../../rusty-kaspa/rpc/core" }
serde = "1.0.203"
serde_json = "1.0.117"
thiserror = "1.0.61"

workflow-core = {path="../../workflow-rs/core" }
workflow-log = {path="../../workflow-rs/log" }
futures = "0.3.30"
tokio = "1.38.0"
ctrlc = "3.4.4"
itertools = "0.13.0"
secp256k1 = { version = "0.28.2", features = [
    "global-context",
    "rand-std",
    "serde",
] }
rand = "0.8.5"
